@@ -71,6 +71,8 @@ SoupServer        *soup_server_new            (const char            *optname1,
 SoupProtocol       soup_server_get_protocol   (SoupServer            *serv);
 guint              soup_server_get_port       (SoupServer            *serv);
 
+SoupSocket        *soup_server_get_listener   (SoupServer            *serv);
+
 void               soup_server_run            (SoupServer            *serv);
 void               soup_server_run_async      (SoupServer            *serv);
 void               soup_server_quit           (SoupServer            *serv);
